--- a/online-1|basics/bibliography.bib
+++ b/online-1|basics/bibliography.bib
@@ -1,4 +1,4 @@
-@article{1,
+@article{qi2017pointnet++,
   title={Pointnet++: Deep hierarchical feature learning on point sets in a metric space},
   author={Qi, Charles Ruizhongtai and Yi, Li and Su, Hao and Guibas, Leonidas J},
   journal={Advances in neural information processing systems},
@@ -6,7 +6,7 @@
   year={2017}
 }
 
-@inproceedings{hu2020randla,
+  @inproceedings{hu2020randla,
   title={Randla-net: Efficient semantic segmentation of large-scale point clouds},
   author={Hu, Qingyong and Yang, Bo and Xie, Linhai and Rosa, Stefano and Guo, Yulan and Wang, Zhihua and Trigoni, Niki and Markham, Andrew},
   booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
@@ -14,7 +14,7 @@
   year={2020}
 }
 
-@inproceedings{2,
+  @inproceedings{qi2019deep,
   title={Deep hough voting for 3d object detection in point clouds},
   author={Qi, Charles R and Litany, Or and He, Kaiming and Guibas, Leonidas J},
   booktitle={proceedings of the IEEE/CVF International Conference on Computer Vision},
@@ -22,16 +22,7 @@
   year={2019}
 }
 
-
-@inproceedings{3,
-  title={Deep hough voting for 3d object detection in point clouds},
-  author={Qi, Charles R and Litany, Or and He, Kaiming and Guibas, Leonidas J},
-  booktitle={proceedings of the IEEE/CVF International Conference on Computer Vision},
-  pages={9277--9286},
-  year={2019}
-}
-
-@inproceedings{qi2017pointnet,
+ @inproceedings{qi2017pointnet,
   title={Pointnet: Deep learning on point sets for 3d classification and segmentation},
   author={Qi, Charles R and Su, Hao and Mo, Kaichun and Guibas, Leonidas J},
   booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
